--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -19,13 +19,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-      - name: AWS login
+      - name: Configure AWS creds
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1    
-
+          aws-region: ${{ env.AWS_REGION }}    
       - name: Run Infracost action
         uses: Liquid-Reply/demo-actions/infracost@main
         env:
