--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -19,10 +19,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
-      - name: Configure AWS creds
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: ${{ env.AWS_REGION }}    
+      # - name: AWS login
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-central-1    
       - name: Run Infracost action
         uses: Liquid-Reply/demo-actions/infracost@main
         env:
