--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -10,6 +10,10 @@ env:
 jobs:
   infracost:
     runs-on: ubuntu-latest
+    permissions:
+     contents: read
+      # Required to post comments
+     pull-requests: write
     env:
        DEPLOYMENT_ENV: "dev"
 
