--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -12,6 +12,7 @@ jobs:
     permissions:
      contents: read
      pull-requests: write
+     id-token: write
     env:
        DEPLOYMENT_ENV: "dev"
 
@@ -20,13 +21,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
         with:
-          fetch-depth: '0'
-      # - name: AWS login
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: eu-central-1    
+          fetch-depth: '0'   
       - name: Run Infracost action
         uses: Liquid-Reply/demo-actions/infracost@main
         env:
