--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -10,7 +10,7 @@ jobs:
   infracost:
     runs-on: ubuntu-latest
     permissions:
-     contents: read
+     contents: write
      pull-requests: write
      id-token: write
     env:
